<resources>
    <string name="app_name">GlobeSurfer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="filter_btn_text">Filter</string>
    <string name="population_label">Population</string>
    <string name="region_label">Region</string>
    <string name="capital_label">Capital</string>
    <string name="language_label">Language</string>
    <string name="area_label">Area</string>
    <string name="currency_label">Currency</string>
    <string name="time_zone_label">Time Zone</string>
    <string name="driving_side_label">Driving side</string>
    <string name="languages_label">Languages</string>
    <string name="english_launguage_code">EN</string>
    <string name="continent_label">Continent</string>
    <string name="filter_label">Filter</string>
    <string name="reset_btn_text">Reset</string>
    <string name="show_results_btn_text">Show results</string>
    <string name="dark_light_mode_content_description">Change to dark mode or light mode</string>

    <string-array name="language_list">
        <item>English:en</item>
        <item>German:deu</item>
        <item>Chinese:zho</item>
        <item>Turkish:tur</item>
        <item>Spanish:spa</item>
        <item>Russian:rus</item>
        <item>Korean:kor</item>
        <item>Japan:jpn</item>
        <item>Arabic:ara</item>
    </string-array>

    <string-array name="continent_list">
        <item>Africa</item>
        <item>Antarctica</item>
        <item>Asia</item>
        <item>Australia</item>
        <item>Europe</item>
        <item>North America</item>
        <item>South America</item>
    </string-array>
</resources>