<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        tools:context=".ui.DetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/country_name"
                android:layout_gravity="center"
                android:padding="16dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="?attr/colorOnBackground"
                android:fontFamily="@font/exo_2_bold"
                android:gravity="center"
                tools:text="Nigeria"
                app:drawableTint="?attr/colorOnBackground"
                app:drawableStartCompat="@drawable/ic_back" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:id="@+id/country_flag"
                tools:src="@android:drawable/picture_frame"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/population_label"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2"
                    android:id="@+id/population"
                    tools:text="205,000,000"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/region_label"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2"
                    android:id="@+id/continent"
                    tools:text="Africa"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/capital_label"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2"
                    android:id="@+id/capital"
                    tools:text="Nigeria"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/language_label"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2"
                    android:id="@+id/language"
                    tools:text="English, Yoruba"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/area_label"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/area"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2"
                    tools:text="45,000 km2"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/currency_label"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/currency"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2"
                    tools:text="Naira"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/time_zone_label"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_zone"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2"
                    tools:text="GMT+1:00"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/driving_side_label"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driving_side"
                    android:textColor="?attr/colorOnBackground"
                    android:fontFamily="@font/exo_2"
                    tools:text="Left"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>