<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            tools:context=".ui.dialogs.DialogFilter">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo_2_bold"
                    android:text="@string/filter_label"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:icon="@drawable/ic_close"
                    app:iconGravity="textStart"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/close_btn"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2_semibold"
                        android:textColor="?attr/colorOnBackground"
                        android:text="@string/continent_label"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:icon="@drawable/ic_arrow_down"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        app:iconGravity="textStart"
                        app:iconTint="?attr/colorOnBackground"
                        android:id="@+id/continent_drop_down_btn"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/continent_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:clipToPadding="false"
                    android:visibility="gone"
                    tools:visibility="visible"
                    tools:listitem="@layout/display_continent_list"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo_2_semibold"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/time_zone_label"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:icon="@drawable/ic_arrow_down"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:iconGravity="textStart"
                    app:iconTint="?attr/colorOnBackground"
                    app:srcCompat="@drawable/ic_arrow_down"
                    android:id="@+id/time_zone_drop_down_btn"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/time_zone_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible"
                android:clipToPadding="false"
                tools:listitem="@layout/display_time_zone_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reset_btn"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:padding="16dp"
                    android:text="@string/reset_btn_text"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textAllCaps="false"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_result_btn"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button"
                    android:padding="16dp"
                    android:layout_margin="4dp"
                    android:text="@string/show_results_btn_text"
                    android:textAllCaps="false"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>