<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="24dp"
            android:orientation="vertical"
            tools:context=".ui.SearchFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/globesurfer_logo_small"
                    android:tint="?attr/colorOnBackground"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="100dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:tint="?attr/colorOnBackground"
                        app:icon="@drawable/ic_dark_mode"
                        app:srcCompat="@drawable/ic_dark_mode" />
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="24dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/search_box"
                    android:textSize="18sp"
                    android:padding="16dp"
                    android:enabled="false"
                    android:textColor="?attr/colorOnBackground"
                    app:drawableTint="?attr/colorOnBackground"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_search"
                    android:textColorHint="?attr/colorOnBackground"
                    android:hint="@string/search_hint"/>
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/languageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/english_launguage_code"
                    app:icon="@drawable/ic_language"
                    android:layout_gravity="start"
                    android:textAllCaps="true"
                    app:cornerRadius="4dp"
                    app:iconTint="?attr/colorOnBackground"
                    android:textColor="?attr/colorOnBackground"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filterBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:icon="@drawable/ic_filter"
                    app:cornerRadius="4dp"
                    app:iconTint="?attr/colorOnBackground"
                    android:text="@string/filter_btn_text"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorOnBackground"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/country_list_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:clipToPadding="false"
                tools:listitem="@layout/display_country_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorSize="56dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:id="@+id/loading_progress"
                android:layout_marginBottom="8dp"
                app:trackThickness="8dp"
                android:indeterminate="true" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:tint="?attr/colorOnBackground"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_connection_error"
                android:id="@+id/connection_error"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>